fixing minor responsive issue with 'recent story' cards when the device's screen is too small

--- a/desktop/frontend/styles/components/landing-page--home/recent-story.css
+++ b/desktop/frontend/styles/components/landing-page--home/recent-story.css
@@ -57,13 +57,13 @@
 }
 
 .recent-story--details .source .source--name {
-  --font: clamp(5px, 1rem, 13px) var(--font--graphik-semibold);
+  --font: clamp(5px, 1rem, 10px) var(--font--graphik-semibold);
   color: var(--color--primary-light-50);
   font: var(--font);
 }
 
 .recent-story--details .title {
-  --font: clamp(10px, 2rem, 22px) var(--font--tiempos-headline-semibold);
+  --font: clamp(10px, 2rem, 20px) var(--font--tiempos-headline-semibold);
   color: var(--color--primary-light-90);
   font: var(--font);
   line-height: 1.3;
@@ -80,7 +80,7 @@
 }
 
 .recent-story--details .text {
-  --font: clamp(8px, 1.3rem, 14px) var(--font--graphik-regular);
+  --font: clamp(8px, 1.3rem, 13px) var(--font--graphik-regular);
   color: var(--color--primary-light-50);
   font: var(--font);
   line-height: 1.5;
@@ -92,7 +92,7 @@
 }
 
 .recent-story--details > span {
-  --font: clamp(8px, 1.2rem, 13px) var(--font--graphik-semibold);
+  --font: clamp(8px, 1.2rem, 12px) var(--font--graphik-semibold);
   color: var(--color--primary-light-80);
   cursor: pointer;
   font: var(--font);
@@ -108,6 +108,7 @@
     aspect-ratio: 16 / 9;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    height: 100%;
   }
 
   .recent-story--details {
@@ -118,7 +119,7 @@
     max-width: 450px;
     overflow: hidden;
     white-space: nowrap;
-    width: 450px;
+    width: 100%;
   }
 
   .recent-story--details .title h3,
